brain/sources/prod-metadata/objects/Program_Version__c/Program_Version__c.object-meta.xml
<CustomObject>
    <label>Program Version</label>
    <nameField>
        <label>Program Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>