brain/sources/prod-metadata/objects/Program_Version__c/fields/Booking_Mode__c.field-meta.xml
<CustomField>
    <fullName>Booking_Mode__c</fullName>
    <description>How candidate-side booking works. Anytime = candidate picks any time within trainer availability. Fixed Schedule = candidate must pick one of the pre-defined session windows.</description>
    <label>Booking Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anytime</fullName>
            </value>
            <value>
                <fullName>Fixed Schedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>