brain/sources/prod-metadata/objects/Program_Version__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <description>Total number of days the program runs. Drives per-day session generation for Group Session programs.</description>
    <label>Duration (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>