brain/sources/prod-metadata/objects/Program_Version__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>Effective From</label>
    <type>DateTime</type>
</CustomField>