brain/sources/prod-metadata/objects/Program_Version__c/fields/Has_Mock__c.field-meta.xml
<CustomField>
    <fullName>Has_Mock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this program version includes a mock interview. Unlocks the other Mock_* configuration fields.</description>
    <label>Include Mock Interview</label>
    <type>Checkbox</type>
</CustomField>