brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Blocks_Progress__c.field-meta.xml
<CustomField>
    <fullName>Mock_Blocks_Progress__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, a candidate cannot proceed to the next mock cycle (e.g. next week) until the current mock is booked and attended. Runtime enforcement lives in the candidate portal.</description>
    <label>Mock Blocks Progress</label>
    <type>Checkbox</type>
</CustomField>