brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Booking_Owner__c.field-meta.xml
<CustomField>
    <fullName>Mock_Booking_Owner__c</fullName>
    <description>Who schedules the mock interview session — the trainer (manual) or the candidate (self-service).</description>
    <label>Mock Booking Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trainer Books</fullName>
            </value>
            <value>
                <fullName>Candidate Books</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>