brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Booking_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Mock_Booking_Window_Days__c</fullName>
    <defaultValue>4</defaultValue>
    <description>How many working days BEFORE the mock date the candidate portal opens the slot picker. Default 4. Change per-program if this cohort needs a wider/tighter booking window.</description>
    <label>Mock Booking Window (working days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>