brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Cadence_Day__c.field-meta.xml
<CustomField>
    <fullName>Mock_Cadence_Day__c</fullName>
    <description>Day of the week regular weekly mocks land on. Default Monday. Combined with the cadence rule: mock date = this weekday of the next week after training-week ends.</description>
    <label>Mock Cadence Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
                <default>true</default>
                <label>Monday</label>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>