brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Mock_Duration_Min__c</fullName>
    <description>Duration of each mock interview in minutes. Drives how the candidate portal slices interviewer calendar availability into bookable slots (e.g. 60 -&gt; hour-long 07-08, 08-09, ... slots inside org Business Hours minus each interviewer&apos;s existing Events).</description>
    <label>Mock Duration (min)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>