brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Failure_Requires_Retake__c.field-meta.xml
<CustomField>
    <fullName>Mock_Failure_Requires_Retake__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, a candidate who fails a mock interview must retake the corresponding training cycle (per the retake logic — fall back to earlier weeks if the current week has no capacity).</description>
    <label>Mock Failure Requires Retake</label>
    <type>Checkbox</type>
</CustomField>