brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Final_Week_Day__c.field-meta.xml
<CustomField>
    <fullName>Mock_Final_Week_Day__c</fullName>
    <description>Day of the week the FINAL-week mock lands on (typically the last working day of the training itself, not the following Monday). Default Friday.</description>
    <label>Mock Final Week Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
                <default>true</default>
                <label>Friday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>