brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Mock_Frequency__c</fullName>
    <description>How often the mock interview recurs during this program.</description>
    <label>Mock Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>End of Program</fullName>
            </value>
            <value>
                <fullName>Custom (After Specific Steps)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>