brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Interviewer_Group__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interviewer_Group__c</fullName>
    <description>DeveloperName (API name) of the Salesforce Public Group whose members can conduct mock interviews for this program. Populated via a dropdown in the Program Creation flow (queries all Regular Public Groups at runtime). If blank, the portal falls back to a default group name. Enables different programs to use different interviewer pools -- e.g. AI_ML_Mock_Interviewers, Resume_Mock_Interviewers.</description>
    <label>Mock Interviewer Public Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>