brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Miss_Action__c.field-meta.xml
<CustomField>
    <fullName>Mock_Miss_Action__c</fullName>
    <description>What happens when the trainer misses the result deadline. Drop Training = auto-drop cascade fires. Warn Only = flag on record but no drop. Notify Admin = create task/email to admin. Default Drop Training.</description>
    <label>Mock Miss Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop Training</fullName>
                <default>true</default>
                <label>Drop Training</label>
            </value>
            <value>
                <fullName>Warn Only</fullName>
            </value>
            <value>
                <fullName>Notify Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>