brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Overflow_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Mock_Overflow_Threshold__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Overflow threshold for mock booking. When a mock day&apos;s total remaining availability is at or below this number, MockAvailabilityService opens the next working day (skipping weekends and holidays) and cascades forward until pending mocks can be scheduled. Read by MockAvailabilityService; defaults to 3 if blank.</description>
    <inlineHelpText>When a mock day&apos;s remaining interviewer openings (summed across its time slots) drop to this number or below, the next working day is also opened for mock booking. Leave blank to use the default of 3.</inlineHelpText>
    <label>Mock Overflow Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>