brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Reschedule_Lock_Days__c.field-meta.xml
<CustomField>
    <fullName>Mock_Reschedule_Lock_Days__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Number of working days before the mock date when a booked slot can no longer be rescheduled by the candidate. Default 2.</description>
    <label>Mock Reschedule Lock (working days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>