brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Result_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Mock_Result_Deadline_Days__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Number of working days AFTER the mock date the trainer has to record a result (Pass/Fail). If no result recorded by then, the Mock Miss Action fires. Default 3.</description>
    <label>Mock Result Deadline (working days)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>