brain/sources/prod-metadata/objects/Program_Version__c/fields/Mock_Slot_Granularity_Min__c.field-meta.xml
<CustomField>
    <fullName>Mock_Slot_Granularity_Min__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Slot slicing size in minutes. 60 = hour-aligned slots (07-08, 08-09). 30 = half-hour slots. 15 = quarter-hour slots. Default 60.</description>
    <label>Mock Slot Granularity (min)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>