brain/sources/prod-metadata/objects/Program_Version__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Program Versions</relationshipLabel>
    <relationshipName>Program_Versions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>