brain/sources/prod-metadata/objects/Program_Version__c/fields/Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration__c</fullName>
    <description>Duration of each session window in minutes. Restricted picklist with 15-minute intervals up to 3 hours. Value is the numeric minute count as a string (e.g. &quot;60&quot;) so Apex/JS can Number() it directly.</description>
    <label>Session Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>15 minutes</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>30 minutes</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 minutes</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>1 hour</label>
            </value>
            <value>
                <fullName>75</fullName>
                <label>1 hour 15 minutes</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>1 hour 30 minutes</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>1 hour 45 minutes</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>2 hours</label>
            </value>
            <value>
                <fullName>135</fullName>
                <label>2 hours 15 minutes</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>2 hours 30 minutes</label>
            </value>
            <value>
                <fullName>165</fullName>
                <label>2 hours 45 minutes</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>3 hours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>