brain/sources/prod-metadata/objects/Program_Version__c/fields/Session_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration_Min__c</fullName>
    <description>DEPRECATED — replaced by Session_Duration__c (Picklist). Kept only because obsolete flow versions still reference it. Do not use in new automation.</description>
    <label>Session Duration (Min) [Deprecated]</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>