brain/sources/prod-metadata/objects/Program_Version__c/fields/Sessions_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Per_Day__c</fullName>
    <description>Number of session windows per day when Booking Mode is Fixed Schedule. Used by the Program Creation wizard to generate the correct number of Session Window template rows.</description>
    <label>Sessions Per Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>