brain/sources/prod-metadata/objects/Program_Version__c/fields/Total_Expected_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Duration__c</fullName>
    <label>Total Expected Duration</label>
    <summarizedField>StepTemplate__c.Expected_Duration_Min__c</summarizedField>
    <summaryForeignKey>StepTemplate__c.Program_Version__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>