brain/sources/prod-metadata/objects/Program_Version__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <label>Version Number</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>